# agent-temp

./: .env.example  .gitignore  AI_USAGE_AND_DECISIONS.md  AI编程工具使用及架构取舍.md  ARCHITECTURE.md  README.md  agent开发.md  pyproject.toml
examples/traces/: compression_trace.json  deepseek_trace.json
examples/workspace/data/: agent_notes.md  extra_notes.txt  largemodel_scene_task_mapping_1783071396.xlsx  largemodel_scene_task_mapping_sheet2.csv
examples/workspace/reports/: agent_report.md
examples/workspace/skills/report-writer/: SKILL.md
src/local_agent/: __init__.py  cli.py  config.py  model.py  policy.py  runtime.py  schema.py  skills.py  token_budget.py  tools.py  trace.py
tests/: test_config.py  test_model.py  test_runtime.py  test_tools.py
