[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent"
version = "0.1.0"
description = "A small CLI AI agent with tools, skills, token budgeting, and replayable trace."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local Agent" }]
dependencies = []

[project.scripts]
agent = "local_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
